# codeclimate-semgrep

./: .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  engine.json  package.json  paths.txt  pnpm-lock.yaml  slim.report.json
codeclimate_semgrep/: util.py
codeclimate_semgrep/cc/: __init__.py  output.py
codeclimate_semgrep/semgrep/: output.py
docs/: CHANGELOG.md  CONTRIBUTING.md  slim.codeclimate.report.json  slim.report.json  slim.semgrep.report.json
docs/partials/: guide.md
local/: codeclimate-semgrep  engine.json  package-lock.json  paths.codeclimate.txt  paths.txt  test-config.json
local/codeclimate-semgrep/: engine.json  pyproject.toml
local/codeclimate-semgrep/.devcontainer/: devcontainer.json
local/codeclimate-semgrep/codeclimate_semgrep/: bridge.py  cli.py
local/codeclimate-semgrep/codeclimate_semgrep/cc/: config.py
local/codeclimate-semgrep/schemas/cc/: config.json  output.json
local/codeclimate-semgrep/schemas/semgrep/: output.json
local/codeclimate-semgrep/tests/: .codeclimate.yml  config.json  sentinel-body.yml  sentinel-definition.yml  test_cli.py
local/codeclimate-semgrep/tests/cc/: test_output.py
schemas/cc/: output.json
schemas/semgrep/: output.json
test/output-sample/: .codeclimate.yml
test/structure/: codeclimate.yml  semgrep.yml
tests/: .codeclimate.yml  config.json  sentinel-body.yml
