[tool.poetry]
name = "codeclimate-semgrep"
version = "0.1.0"
description = ""
authors = ["Gabriel Gironda <gabriel@gironda.org>"]

[tool.poetry.dependencies]
python = "^3.7"
semgrep = "^0.34.0"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
ccsemgrep = 'codeclimate_semgrep.cli:run'