[tool.poetry]
name = "codeclimate-semgrep"
version = "0.1.0"
description = ""
authors = ["Gabriel Gironda <gabriel@gironda.org>"]

[tool.poetry.dependencies]
python = "^3.7"
semgrep = "*"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
ccsemgrep = 'codeclimate_semgrep.cli:run'
